--- a/css/style.css
+++ b/css/style.css
@@ -1,249 +1,294 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap");
 
 * {
-    box-sizing: border-box;
-    font-family: 'Lato', 'Roboto', sans-serif;
+  box-sizing: border-box;
+  font-family: "Lato", "Roboto", sans-serif;
+}
+
+body {
+  box-sizing: border-box;
 }
 
 :root {
-    --main-color: #3D37F1;
-    --text-gray: #534D4D;
+  --main-color: #3d37f1;
+  --text-gray: #534d4d;
 }
 
 /* Header And Navigation */
 
-.header {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+header {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .navigation {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 65px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 65px;
 }
 
 .nav_links {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .nav_logo_img {
-    max-width: 140px;
-    min-height: 50px;
+  max-width: 140px;
+  min-height: 50px;
 }
 
 .nav_list {
-    display: flex;
-    gap: 1.8rem;
+  display: flex;
+  gap: 1.8rem;
 }
 
 .nav_list a {
-    font-family: 'Lato', sans-serif;
-    font-size: 12px;
-    font-weight: 800;
-    color: var(--main-color);
+  font-family: "Lato", sans-serif;
+  font-size: 12px;
+  font-weight: 800;
+  color: var(--main-color);
 }
 
 .nav_list a:hover {
-    text-shadow: 2px 2px 2px gray;
-    transition: .3s;
+  text-shadow: 2px 2px 2px gray;
+  transition: 0.3s;
 }
 
 /* Top Container */
 
 .top_container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 65px;
-    height: 400px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 65px;
+  height: 400px;
 }
 
 .top_image img {
-    height: 400px;
-    width: 650px;
+  height: 400px;
+  width: 650px;
 }
 
 .top_text h1 {
-    font-family: 'lato';
-    font-weight: 800;
-    max-width: 600px;
-    font-size: 60px;
-    margin-bottom: 40px;
-    color: var(--text-gray);
+  font-family: "lato";
+  font-weight: 800;
+  max-width: 600px;
+  font-size: 60px;
+  margin-bottom: 40px;
+  color: var(--text-gray);
 }
 
 .top_text {
-    display: flex;
-    flex-direction: column;
-    max-width: 500px;
-    justify-content: space-evenly;
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  justify-content: space-evenly;
 }
 
 .top_text p {
-    font-family: 'Roboto';
-    font-size: 15px;
-    margin-bottom: 80px;
-    color: var(--text-gray);
+  font-family: "Roboto";
+  font-size: 15px;
+  margin-bottom: 80px;
+  color: var(--text-gray);
 }
 
 .top_text button {
-    max-width: 150px;
-    height: 40px;
-    border-radius: 50px;
-    background-color: var(--main-color);
-    border: none;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    color: white;
-    font-size: 15px;
-    font-weight: 500;
-    cursor: pointer;
+  max-width: 150px;
+  height: 40px;
+  border-radius: 50px;
+  background-color: var(--main-color);
+  border: none;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  color: white;
+  font-size: 15px;
+  font-weight: 500;
+  cursor: pointer;
 }
 
 .top_text button:hover {
-    transform: scale(1.1);
-    transition: .5s;
-    box-shadow: 4px 4px 4px gray;
+  transform: scale(1.1);
+  transition: 0.5s;
+  box-shadow: 4px 4px 4px gray;
 }
 
 .wave {
-    max-width: 25px;
-    max-height: 25px;
+  max-width: 25px;
+  max-height: 25px;
 }
 
 /* Main container */
 .main_container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10rem;
 }
 
 .main_text {
-    text-align: center;
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  text-align: center;
+  width: 500px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .main_services {
-    font-family: 'lato';
-    font-size: 12px;
-    font-weight: 700;
-    color: var(--main-color);
+  font-family: "lato";
+  font-size: 12px;
+  font-weight: 700;
+  color: var(--main-color);
 }
 
 .main_text h2 {
-    font-family: 'lato';
-    font-size: 30px;
-    font-weight: 600;
-    color: var(--text-gray);
+  font-family: "lato";
+  font-size: 30px;
+  font-weight: 600;
+  color: var(--text-gray);
 }
 
 .main_paragraph {
-    font-family: 'Roboto';
-    color: var(--text-gray);
-    font-size: 12px;
+  font-family: "Roboto";
+  color: var(--text-gray);
+  font-size: 12px;
 }
 
 /* Cards */
 
 .main_cards {
-    margin: 5rem;
-    display: flex;
-    flex-direction: column;
-    gap: 5rem;
+  margin: 5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
 }
 
 .card_row_one {
-    display: flex;
-    gap: 2rem;
+  display: flex;
+  gap: 2rem;
 }
 
 .card_row_two {
-    display: flex;
-    gap: 2rem;
+  display: flex;
+  gap: 2rem;
 }
 
 .card {
-    width: 300px;
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    text-align: center;
+  width: 300px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  text-align: center;
 }
 
 .card:hover {
-    transform: scale(1.1);
-    transition: 0.5s;
-    box-shadow: 10px 10px 10px gray;
+  transform: scale(1.1);
+  transition: 0.5s;
+  box-shadow: 10px 10px 10px gray;
 }
 
 .card h3 {
-    font-family: 'lato';
-    font-size: 20px;
-    font-weight: 600;
-    color: white;
+  font-family: "lato";
+  font-size: 20px;
+  font-weight: 600;
+  color: white;
 }
 
 .card p {
-    font-family: 'Roboto';
-    font-size: 12px;
-    color: white;
+  font-family: "Roboto";
+  font-size: 12px;
+  color: white;
 }
 
 .card button {
-    background-color: transparent;
-    border: 1px solid white;
-    color: white;
-    border-radius: 50px;
-    width: 6rem;
-    height: 2rem;
-    cursor: pointer;
+  background-color: transparent;
+  border: 1px solid white;
+  color: white;
+  border-radius: 50px;
+  width: 6rem;
+  height: 2rem;
+  cursor: pointer;
 }
 
 .card button:hover {
-    background-color: white;
-    color: black;
-    transition: .5s;
+  background-color: white;
+  color: black;
+  transition: 0.5s;
 }
 
 /* Individual cards */
 #card_one {
-    background: linear-gradient(#FAB977, #da8c3e);
+  background: linear-gradient(#fab977, #da8c3e);
 }
 
 #card_two {
-    background: linear-gradient(#41EAE3, #2293B7);
+  background: linear-gradient(#41eae3, #2293b7);
 }
 
 #card_three {
-    background: linear-gradient(#69529F, #463864);
+  background: linear-gradient(#69529f, #463864);
 }
 
 #card_four {
-    background: linear-gradient(#7baee8, #0962C5);
+  background: linear-gradient(#7baee8, #0962c5);
 }
 
 #card_five {
-    background: linear-gradient(#A5A2F6, #564FD6);
+  background: linear-gradient(#a5a2f6, #564fd6);
 }
 
 #card_six {
-    background: linear-gradient(#FF8088, #984141);
+  background: linear-gradient(#ff8088, #984141);
 }
 
+@media only screen and (max-width: 1025px) {
+  .navigation {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 20px 20px;
+  }
+  .nav_list a {
+    font-size: 17px;
+    font-weight: 600;
+  }
+  .top_container {
+    justify-content: center;
+    align-items: center;
+  }
+  .top_text {
+    text-align: center;
+    align-items: center;
+  }
+  .top_image {
+    display: none;
+  }
+  .card_row_one {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .card_row_two {
+    flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 834px) {
+  .nav_list a {
+    font-size: 12px;
+    font-weight: 600;
+  }
+}
